Opened 11 years ago
Closed 11 years ago
#4881 closed defect (fixed)
API:swscale with slices gives bad output
| Reported by: | rxt | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | swscale |
| Version: | git-master | Keywords: | regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
After the fix in #4877 the scaler no longer crashes with slices, but the output is totally wrong. Only some lines at the top of the image are drawn, the rest of the picture is black.
Also this time undefining FILTER_NEW in swscale_internal.h fixes it.
How to reproduce:
Compile and run the attached code
gcc -g scaling_r.c -L/usr/local/lib -lswscale -lm -lavutil -o scaling_r
It will create a file named "qqq". Play the resulting file with
ffplay -f rawvideo -pix_fmt rgb24 -video_size 720x540 qqq
To see how the picture should look line just recompile and run the code defining NO_SLICES
Version
ffmpeg version N-74836-gaff3acc Copyright (c) 2000-2015 the FFmpeg developers
built with gcc 4.9.2 (Debian 4.9.2-10)
configuration: --enable-gpl --enable-postproc --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-nonfree --enable-version3 --enable-libmp3lame --samples=fate-suite/
libavutil 55. 2.100 / 55. 2.100
libavcodec 57. 3.100 / 57. 3.100
libavformat 57. 2.100 / 57. 2.100
libavdevice 57. 0.100 / 57. 0.100
libavfilter 6. 8.100 / 6. 8.100
libswscale 4. 0.100 / 4. 0.100
libswresample 2. 0.100 / 2. 0.100
libpostproc 54. 0.100 / 54. 0.100
Attachments (1)
Change History (3)
by , 11 years ago
| Attachment: | scaling_r.c added |
|---|
comment:1 by , 11 years ago
| Priority: | normal → important |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
comment:2 by , 11 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |



Regression since 62d176de1224f6b9921a53171e5daa7460d5a772