swscale: fix ticket #4881

When scaling only a slice of a frame the output was written always
in the first lines leaving the rest of the frame black.